--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
-    "bootstrap": "^4.0.0-beta.2",
+    "angularfire2": "^5.0.0-rc.4",
+    "bootstrap": "4.0.0-beta.2",
     "core-js": "^2.4.1",
+    "firebase": "4.8.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "moment": "^2.20.1",
