--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "angularfire2": "^5.0.0-rc.4",
+    "blueimp-load-image": "^2.17.1",
     "bootstrap": "4.0.0-beta.2",
     "core-js": "^2.4.1",
     "firebase": "4.8.0",
